name:                ciphers
version:             0.1.0.0
synopsis:            Collection of various classical crypto algorithms.
description:         Please see README.md
homepage:            https://github.com/kmein/ciphers#readme
license:             BSD3
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
copyright:           (C) Kierán Meinhardt 2016
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Cipher
                     , Text.Cipher.Atbash
                     , Text.Cipher.Caesar
                     , Text.Cipher.Grid
                     , Text.Cipher.Scytale
                     , Text.Cipher.Playfair
                     , Text.Cipher.Vigenere
                     , Text.Cipher.Util
  build-depends:       base >= 4.7 && < 5
                     , array
                     , MissingH
                     , split
  default-language:    Haskell2010

executable ciphers-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , ciphers
                     , optparse-applicative
  default-language:    Haskell2010

test-suite ciphers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ciphers
                     , HTF
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kmein/ciphers
